--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,28 @@ Mkfile.old
 dkms.conf
 
 # End of https://www.toptal.com/developers/gitignore/api/c
+
+# Created by https://www.toptal.com/developers/gitignore/api/altium
+# Edit at https://www.toptal.com/developers/gitignore?templates=altium
+
+### Altium ###
+# Previews Folders
+**/__Previews/
+
+# History Folders
+**/History/*
+
+# Project Logs
+Project\ Logs*/
+
+# Project Outputs
+Project\ Outputs*/
+
+# Auto-conversion notices
+*.PcbDoc.htm
+
+# Access lock file for dbLib sources
+**/*.ldb
+
+
+# End of https://www.toptal.com/developers/gitignore/api/altium
