--- a/.gitignore
+++ b/.gitignore
@@ -150,5 +150,36 @@ Project\ Outputs*/
 # Access lock file for dbLib sources
 **/*.ldb
 
+# Various Altium files
+*.PrjPCBStructure
+*.SchDocPreview
+*.PcbDocPreview
+__Previews
+*.PrjPcbStructure
+*.Dat
+*.REP 
+*.TLT
+*.LOG
+*.log
+*.htm
+*.$$$
+
+#useless dirs
+Project\ Outputs
+Project\ Logs
+Project Outputs for*
+
+#History
+History
+
+#Exports, but not manual ones
+exports/*
+!exports/manual
+
+#Python stuff
+scripts/__pycache__/
+*.bak
+*.dwl
+*.dwl2
 
 # End of https://www.toptal.com/developers/gitignore/api/altium
