--- a/Workspace_STM32CubeIDE/Bode_Analyzer/TouchGFX/simulator/msvs/Application.vcxproj
+++ b/Workspace_STM32CubeIDE/Bode_Analyzer/TouchGFX/simulator/msvs/Application.vcxproj
@@ -21,12 +21,12 @@
     <ClCompile Include="..\..\generated\gui_generated\src\common\FrontendApplicationBase.cpp"/>
     <ClCompile Include="..\..\gui\src\model\Model.cpp"/>
     <ClCompile Include="..\..\generated\simulator\src\video\SoftwareMJPEGDecoder.cpp"/>
-    <ClCompile Include="..\..\gui\src\config_freq_screen\Config_freqPresenter.cpp"/>
-    <ClCompile Include="..\..\gui\src\config_freq_screen\Config_freqView.cpp"/>
-    <ClCompile Include="..\..\generated\gui_generated\src\config_freq_screen\Config_freqViewBase.cpp"/>
     <ClCompile Include="..\..\gui\src\grafico_screen\GraficoPresenter.cpp"/>
     <ClCompile Include="..\..\gui\src\grafico_screen\GraficoView.cpp"/>
     <ClCompile Include="..\..\generated\gui_generated\src\grafico_screen\GraficoViewBase.cpp"/>
+    <ClCompile Include="..\..\gui\src\freq_config_screen\Freq_ConfigPresenter.cpp"/>
+    <ClCompile Include="..\..\gui\src\freq_config_screen\Freq_ConfigView.cpp"/>
+    <ClCompile Include="..\..\generated\gui_generated\src\freq_config_screen\Freq_ConfigViewBase.cpp"/>
   </ItemGroup>
   <ItemGroup>
     <None Include="$(ApplicationRoot)\assets\texts\texts.xml"/>
@@ -179,12 +179,12 @@
     <ClInclude Include="..\..\gui\include\gui\screen1_screen\Screen1View.hpp"/>
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\common\SimConstants.hpp"/>
     <ClInclude Include="..\..\generated\simulator\include\simulator\video\SoftwareMJPEGDecoder.hpp"/>
-    <ClInclude Include="..\..\gui\include\gui\config_freq_screen\Config_freqPresenter.hpp"/>
-    <ClInclude Include="..\..\gui\include\gui\config_freq_screen\Config_freqView.hpp"/>
-    <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\config_freq_screen\Config_freqViewBase.hpp"/>
     <ClInclude Include="..\..\gui\include\gui\grafico_screen\GraficoPresenter.hpp"/>
     <ClInclude Include="..\..\gui\include\gui\grafico_screen\GraficoView.hpp"/>
     <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\grafico_screen\GraficoViewBase.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\freq_config_screen\Freq_ConfigPresenter.hpp"/>
+    <ClInclude Include="..\..\gui\include\gui\freq_config_screen\Freq_ConfigView.hpp"/>
+    <ClInclude Include="..\..\generated\gui_generated\include\gui_generated\freq_config_screen\Freq_ConfigViewBase.hpp"/>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="$(ApplicationRoot)\generated\simulator\touchgfx.rc"/>
